[ADD] 시드 지갑 연동 추가
