# src/main/java/com/foxya/coin/auth/dto/RecoveryChallengeRequestDto.java
@@ -1,0 +1,9 @@
+package com.foxya.coin.auth.dto;
+
+import lombok.Getter;
+
+@Getter
+public class RecoveryChallengeRequestDto {
+    private String address;
+    private String chain;
+}
