# src/main/java/com/foxya/coin/auth/dto/RecoveryChallengeResponseDto.java
@@ -1,0 +1,13 @@
+package com.foxya.coin.auth.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+
+@Getter
+@Builder
+@AllArgsConstructor
+public class RecoveryChallengeResponseDto {
+    private String message;
+    private int expiresInSeconds;
+}
