# src/main/java/com/foxya/coin/auth/dto/RecoveryResetRequestDto.java
@@ -1,0 +1,11 @@
+package com.foxya.coin.auth.dto;
+
+import lombok.Getter;
+
+@Getter
+public class RecoveryResetRequestDto {
+    private String address;
+    private String chain;
+    private String signature;
+    private String newPassword;
+}
