# src/main/java/com/foxya/coin/wallet/dto/RegisterWalletChallengeRequestDto.java
@@ -1,0 +1,9 @@
+package com.foxya.coin.wallet.dto;
+
+import lombok.Getter;
+
+@Getter
+public class RegisterWalletChallengeRequestDto {
+    private String address;
+    private String chain;
+}
